<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_share">Icon share</string>
    <string name="description_eye">Icon eye</string>
    <string name="description_favorite">Icon favorite</string>
    <string name="Menu_Edit">Edit</string>
    <string name="Menu_Remove">Remove</string>
    <string name="post_hint">Content</string>
    <string name="empty_post_error">Empty content not allowed</string>
    <string name="chooser_share_post" translatable="false">chooser_share_post</string>
    <string name="add_post">post_save</string>
    <string name="poster_of_video">posterVideo</string>
    <string name="description_play">play</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_post_append">User %1$s append new post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
</resources>